<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

   <ScrollView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">

       <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:paddingBottom="@dimen/activity_vertical_margin"
           android:paddingLeft="@dimen/activity_horizontal_margin"
           android:paddingRight="@dimen/activity_horizontal_margin"
           android:paddingTop="@dimen/activity_vertical_margin"
           tools:context="com.fam.rodrigo.regcasaencasa.RegCasa">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/titulo"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:text="@string/titulo1"
                   android:textAppearance="?android:attr/textAppearanceLarge"
                   android:textSize="20sp" />

               <TableLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="2">

                   <TableRow
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1">

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:textSize="13sp"
                           android:text="@string/calle" />

                       <EditText
                           android:id="@+id/edtcalle"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="4"
                           android:inputType="textCapSentences"
                           android:maxLength="30"
                           android:nextFocusDown="@+id/edtterritorio"
                           android:singleLine="true"
                           android:textAlignment="center"
                           android:textSize="14sp" />

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:textSize="13sp"
                           android:text="@string/territorio" />

                       <EditText
                           android:id="@+id/edtterritorio"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:inputType="number"
                           android:maxLength="3"
                           android:textAlignment="center"
                           android:textSize="14sp" />
                   </TableRow>

                   <TableRow
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1">

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:textSize="13sp"
                           android:text="@string/amocasa" />

                       <EditText
                           android:id="@+id/edtamocasa"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="3"
                           android:inputType="textCapWords"
                           android:maxLength="30"
                           android:nextFocusDown="@+id/edtncasa"
                           android:singleLine="true"
                           android:textAlignment="center"
                           android:textSize="14sp" />
                   </TableRow>
               </TableLayout>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="2"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/textView"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/simbolo"
                   android:textAppearance="?android:attr/textAppearanceSmall" />

               <TableLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp"
                   android:stretchColumns="*">

                   <TableRow
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/vuelva" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/ocupado" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/hombre" />
                   </TableRow>

                   <TableRow
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/nocasa" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/nino" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/mujer" />
                   </TableRow>
               </TableLayout>

               <TableLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TableRow
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:background="@color/colorPrimary">

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:text="@string/ncasa"
                           android:textColor="@color/letras"
                           android:textSize="11sp" />

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_weight="2"
                           android:gravity="center"
                           android:text="@string/fecha"
                           android:textColor="@color/letras"
                           android:textSize="11sp" />

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_weight="2"
                           android:gravity="center"
                           android:text="@string/simbolo1"
                           android:textColor="@color/letras"
                           android:textSize="11sp" />

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_weight="4"
                           android:gravity="center"
                           android:text="@string/detalle"
                           android:textColor="@color/letras"
                           android:textSize="11sp" />

                   </TableRow>


                   <TableRow
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent">

                       <EditText
                           android:id="@+id/edtncasa"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:inputType="number"
                           android:maxLength="5"
                           android:nextFocusDown="@+id/edtfecha"
                           android:textSize="13sp" />

                       <EditText
                           android:id="@+id/edtfecha"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="2"
                           android:textSize="13sp" />

                       <Spinner
                           android:id="@+id/spsimbolo"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="2"
                           android:textSize="10sp" />

                       <EditText
                           android:id="@+id/eddetalle"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="4"
                           android:textSize="14sp" />

                   </TableRow>

               </TableLayout>
           </LinearLayout>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>