<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/eliminareg" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/txtmensaje"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_weight="1"
            android:text="@string/mensajes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btneliminar"
                android:text="@string/btelimi"
                android:textSize="16sp"
                android:background="@drawable/selector"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btncancelar"
                android:layout_marginLeft="2dp"
                android:textSize="16sp"
                android:text="@string/btcanel"
                android:background="@drawable/selector"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>